--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
 
   <body>
     <!-- Header Section -->
-    <div class="header">
-
-      <div class="header_logo">
-        <img src="./ressources/images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
-      </div>
-
-      <nav class="navigation">
-        <span><a href="#Mission">Mission</a></span>
-        <span><a href="#Featured">Featured Tea</a></span>
-        <span><a href="#Locations">Locations</a></span>
+    <header class="flexcontainer">
+      <img src="./ressources/images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
+      <nav>
+        <span><a href="#Mission" class="navigation">Mission</a></span>
+        <span><a href="#Featured" class="navigation">Featured Tea</a></span>
+        <span><a href="#Locations" class="navigation">Locations</a></span>
       </nav>
 
-    </div>
+    </header>
 
 
     <!-- Hero and Mission Section -->
