main section started

--- a/index.html
+++ b/index.html
@@ -15,27 +15,39 @@
         <span><a href="#Featured" class="navigation">Featured Tea</a></span>
         <span><a href="#Locations" class="navigation">Locations</a></span>
       </nav>
-
     </header>
+    <!-- Content Block -->
+
+    <div class="content_block">
+
+      <!-- Hero and Mission Section -->
+      <section id="Mission">
+        <div class="mission_image flexcontainer">
 
 
-    <!-- Hero and Mission Section -->
-    <section id="Mission">
-
-    </section>
+        </div>
 
 
-    <!-- Tea of the Month Section / Featured -->
-    <section id="Featured">
-
-    </section>
+      </section>
 
 
-    <!-- Locations Section -->
-    <section id="Locations">
+      <!-- Tea of the Month Section / Featured -->
+      <section id="Featured">
 
-    </section>
+      </section>
 
+
+      <!-- Locations Section -->
+      <section id="Locations">
+
+      </section>
+
+      <!-- Contact Section -->
+      <section id="Contact">
+
+      </section>
+
+    </div>
     <!-- Footer Section -->
 
   </body>
