--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <!-- Hero and Mission Section -->
       <section id="Mission">
         <div class="mission_image flexcontainer">
-
+          <div class="mission_statement flexcontainer">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+          </div>
 
         </div>
 
