feature section completed

--- a/index.html
+++ b/index.html
@@ -27,15 +27,51 @@
             <h2>Our Mission</h2>
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
           </div>
-
         </div>
-
-
       </section>
-
 
       <!-- Tea of the Month Section / Featured -->
       <section id="Featured">
+        <div class="shop_block">
+          <h2>Tea of the Month</h2>
+          <h4>What´s Steeping at The Tea Cozy?</h4>
+          <div class="flexcontainer features">
+            <!-- Feature 01 -->
+            <div class="feature">
+              <img src="ressources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
+              <span>Fall Berry Blitz Tea</span>
+            </div>
+
+            <!-- Feature 02 -->
+            <div class="feature">
+              <img src="ressources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+              <span>Spiced Rum Tea</span>
+            </div>
+
+            <!-- Feature 03 -->
+            <div class="feature">
+              <img src="ressources/images/img-donut.jpg" alt="Seasonal Donuts">
+              <span>Seasonal Donuts</span>
+            </div>
+
+            <!-- Feature 04 -->
+            <div class="feature">
+              <img src="ressources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+              <span>Myrtle Ave Tea</span>
+            </div>
+
+            <!-- Feature 05 -->
+            <div class="feature">
+              <img src="ressources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+              <span>Bedford Bizarre Tea</span>
+            </div>
+
+          </div>
+        </div>
+
+
+
+
 
       </section>
 
