contact and footer complete

--- a/index.html
+++ b/index.html
@@ -65,29 +65,60 @@
               <img src="ressources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
               <span>Bedford Bizarre Tea</span>
             </div>
-
           </div>
         </div>
-
-
-
-
-
       </section>
-
 
       <!-- Locations Section -->
       <section id="Locations">
+        <div class="location_image">
+          <h2>Locations</h2>
+          <div class="locations flexcontainer">
+            <!-- Location 01-->
+            <div class="location">
+              <h3>Downtown</h3>
+              <p>284 West 4th St</p>
+              <p>Suite 108</p>
+              <p>Portland, Maine</p>
+            </div>
 
+            <!-- Location 02-->
+            <div class="location">
+              <h3>East Bayside</h3>
+              <p>3433 Phisherman´s Avenue</p>
+              <p>(Nothwest Corner)</p>
+              <p>Portland, Maine</p>
+            </div>
+
+            <!-- Location 03-->
+            <div class="location">
+              <h3>Oakdale</h3>
+              <p>515 Crescent Avenue</p>
+              <p>Second Floor</p>
+              <p>Portland, Maine</p>
+            </div>
+          </div>
+        <div>
       </section>
 
       <!-- Contact Section -->
       <section id="Contact">
-
+        <div class="contact">
+          <h2>The Tea Cozy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+        </div>
       </section>
-
     </div>
+
     <!-- Footer Section -->
+    <section id="Footer">
+      <footer>
+        <h5>copyright The Tea Cozy 2017-2018</h5>
+
+      </footer>
+    </section>
+
 
   </body>
 </html>
